# nr-phy-c

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  后续添加新模块.txt
gold_seq/: CMakeLists.txt  gold_seq  gold_seq.c  gold_seq.h  test_gold_seq.c
test/: gold_seq.c  gold_seq.h  gold_sequence.c  gold_sequence.h  main.c  test_bad  test_bad.c
